// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecurringRunsManager calls API to load recurring runs 1`] = `
<Fragment>
  <Toolbar
    actions={Array []}
    breadcrumbs={Array []}
    pageTitle="Recurring runs"
  />
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "flex": 2,
          "label": "Created at",
          "sortKey": "created_at",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "",
        },
      ]
    }
    disableSelection={true}
    emptyMessage="No recurring runs found in this experiment."
    filterLabel="Filter recurring runs"
    initialSortColumn="created_at"
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "id": "job1",
          "otherFields": Array [
            "test recurring run name",
            "11/9/2018, 8:07:06 AM",
            true,
          ],
        },
        Object {
          "error": undefined,
          "id": "job2",
          "otherFields": Array [
            "test recurring run name2",
            "11/9/2018, 8:07:06 AM",
            false,
          ],
        },
        Object {
          "error": undefined,
          "id": "job3",
          "otherFields": Array [
            "test recurring run name3",
            "11/9/2018, 8:07:06 AM",
            undefined,
          ],
        },
      ]
    }
    selectedIds={Array []}
    updateSelection={[Function]}
  />
</Fragment>
`;

exports[`RecurringRunsManager reloads the list of runs after enable/disabling 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-152",
      "contained": "MuiButton-contained-142",
      "containedPrimary": "MuiButton-containedPrimary-143",
      "containedSecondary": "MuiButton-containedSecondary-144",
      "disabled": "MuiButton-disabled-151",
      "extendedFab": "MuiButton-extendedFab-149",
      "fab": "MuiButton-fab-148",
      "flat": "MuiButton-flat-136",
      "flatPrimary": "MuiButton-flatPrimary-137",
      "flatSecondary": "MuiButton-flatSecondary-138",
      "focusVisible": "MuiButton-focusVisible-150",
      "fullWidth": "MuiButton-fullWidth-156",
      "label": "MuiButton-label-132",
      "mini": "MuiButton-mini-153",
      "outlined": "MuiButton-outlined-139",
      "outlinedPrimary": "MuiButton-outlinedPrimary-140",
      "outlinedSecondary": "MuiButton-outlinedSecondary-141",
      "raised": "MuiButton-raised-145",
      "raisedPrimary": "MuiButton-raisedPrimary-146",
      "raisedSecondary": "MuiButton-raisedSecondary-147",
      "root": "MuiButton-root-131",
      "sizeLarge": "MuiButton-sizeLarge-155",
      "sizeSmall": "MuiButton-sizeSmall-154",
      "text": "MuiButton-text-133",
      "textPrimary": "MuiButton-textPrimary-134",
      "textSecondary": "MuiButton-textSecondary-135",
    }
  }
  color="primary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-131 MuiButton-text-133 MuiButton-textPrimary-134 MuiButton-flat-136 MuiButton-flatPrimary-137 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-150"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-131 MuiButton-text-133 MuiButton-textPrimary-134 MuiButton-flat-136 MuiButton-flatPrimary-137 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-82",
          "focusVisible": "MuiButtonBase-focusVisible-83",
          "root": "MuiButtonBase-root-81",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-150"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-81 MuiButton-root-131 MuiButton-text-133 MuiButton-textPrimary-134 MuiButton-flat-136 MuiButton-flatPrimary-137 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-132"
        >
          <span>
            Enabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-128",
                  "childLeaving": "MuiTouchRipple-childLeaving-129",
                  "childPulsate": "MuiTouchRipple-childPulsate-130",
                  "ripple": "MuiTouchRipple-ripple-125",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-127",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-126",
                  "root": "MuiTouchRipple-root-124",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-124"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-124"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders a disable button if the run is enabled, clicking the button calls disable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-152",
      "contained": "MuiButton-contained-142",
      "containedPrimary": "MuiButton-containedPrimary-143",
      "containedSecondary": "MuiButton-containedSecondary-144",
      "disabled": "MuiButton-disabled-151",
      "extendedFab": "MuiButton-extendedFab-149",
      "fab": "MuiButton-fab-148",
      "flat": "MuiButton-flat-136",
      "flatPrimary": "MuiButton-flatPrimary-137",
      "flatSecondary": "MuiButton-flatSecondary-138",
      "focusVisible": "MuiButton-focusVisible-150",
      "fullWidth": "MuiButton-fullWidth-156",
      "label": "MuiButton-label-132",
      "mini": "MuiButton-mini-153",
      "outlined": "MuiButton-outlined-139",
      "outlinedPrimary": "MuiButton-outlinedPrimary-140",
      "outlinedSecondary": "MuiButton-outlinedSecondary-141",
      "raised": "MuiButton-raised-145",
      "raisedPrimary": "MuiButton-raisedPrimary-146",
      "raisedSecondary": "MuiButton-raisedSecondary-147",
      "root": "MuiButton-root-131",
      "sizeLarge": "MuiButton-sizeLarge-155",
      "sizeSmall": "MuiButton-sizeSmall-154",
      "text": "MuiButton-text-133",
      "textPrimary": "MuiButton-textPrimary-134",
      "textSecondary": "MuiButton-textSecondary-135",
    }
  }
  color="primary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-131 MuiButton-text-133 MuiButton-textPrimary-134 MuiButton-flat-136 MuiButton-flatPrimary-137 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-150"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-131 MuiButton-text-133 MuiButton-textPrimary-134 MuiButton-flat-136 MuiButton-flatPrimary-137 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-82",
          "focusVisible": "MuiButtonBase-focusVisible-83",
          "root": "MuiButtonBase-root-81",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-150"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-81 MuiButton-root-131 MuiButton-text-133 MuiButton-textPrimary-134 MuiButton-flat-136 MuiButton-flatPrimary-137 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-132"
        >
          <span>
            Enabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-128",
                  "childLeaving": "MuiTouchRipple-childLeaving-129",
                  "childPulsate": "MuiTouchRipple-childPulsate-130",
                  "ripple": "MuiTouchRipple-ripple-125",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-127",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-126",
                  "root": "MuiTouchRipple-root-124",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-124"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-124"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders an enable button if the run is disabled, clicking the button calls enable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-152",
      "contained": "MuiButton-contained-142",
      "containedPrimary": "MuiButton-containedPrimary-143",
      "containedSecondary": "MuiButton-containedSecondary-144",
      "disabled": "MuiButton-disabled-151",
      "extendedFab": "MuiButton-extendedFab-149",
      "fab": "MuiButton-fab-148",
      "flat": "MuiButton-flat-136",
      "flatPrimary": "MuiButton-flatPrimary-137",
      "flatSecondary": "MuiButton-flatSecondary-138",
      "focusVisible": "MuiButton-focusVisible-150",
      "fullWidth": "MuiButton-fullWidth-156",
      "label": "MuiButton-label-132",
      "mini": "MuiButton-mini-153",
      "outlined": "MuiButton-outlined-139",
      "outlinedPrimary": "MuiButton-outlinedPrimary-140",
      "outlinedSecondary": "MuiButton-outlinedSecondary-141",
      "raised": "MuiButton-raised-145",
      "raisedPrimary": "MuiButton-raisedPrimary-146",
      "raisedSecondary": "MuiButton-raisedSecondary-147",
      "root": "MuiButton-root-131",
      "sizeLarge": "MuiButton-sizeLarge-155",
      "sizeSmall": "MuiButton-sizeSmall-154",
      "text": "MuiButton-text-133",
      "textPrimary": "MuiButton-textPrimary-134",
      "textSecondary": "MuiButton-textSecondary-135",
    }
  }
  color="secondary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-131 MuiButton-text-133 MuiButton-textSecondary-135 MuiButton-flat-136 MuiButton-flatSecondary-138 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-150"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-131 MuiButton-text-133 MuiButton-textSecondary-135 MuiButton-flat-136 MuiButton-flatSecondary-138 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-82",
          "focusVisible": "MuiButtonBase-focusVisible-83",
          "root": "MuiButtonBase-root-81",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-150"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-81 MuiButton-root-131 MuiButton-text-133 MuiButton-textSecondary-135 MuiButton-flat-136 MuiButton-flatSecondary-138 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-132"
        >
          <span>
            Disabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-128",
                  "childLeaving": "MuiTouchRipple-childLeaving-129",
                  "childPulsate": "MuiTouchRipple-childPulsate-130",
                  "ripple": "MuiTouchRipple-ripple-125",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-127",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-126",
                  "root": "MuiTouchRipple-root-124",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-124"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-124"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders an enable button if the run's enabled field is undefined, clicking the button calls enable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-152",
      "contained": "MuiButton-contained-142",
      "containedPrimary": "MuiButton-containedPrimary-143",
      "containedSecondary": "MuiButton-containedSecondary-144",
      "disabled": "MuiButton-disabled-151",
      "extendedFab": "MuiButton-extendedFab-149",
      "fab": "MuiButton-fab-148",
      "flat": "MuiButton-flat-136",
      "flatPrimary": "MuiButton-flatPrimary-137",
      "flatSecondary": "MuiButton-flatSecondary-138",
      "focusVisible": "MuiButton-focusVisible-150",
      "fullWidth": "MuiButton-fullWidth-156",
      "label": "MuiButton-label-132",
      "mini": "MuiButton-mini-153",
      "outlined": "MuiButton-outlined-139",
      "outlinedPrimary": "MuiButton-outlinedPrimary-140",
      "outlinedSecondary": "MuiButton-outlinedSecondary-141",
      "raised": "MuiButton-raised-145",
      "raisedPrimary": "MuiButton-raisedPrimary-146",
      "raisedSecondary": "MuiButton-raisedSecondary-147",
      "root": "MuiButton-root-131",
      "sizeLarge": "MuiButton-sizeLarge-155",
      "sizeSmall": "MuiButton-sizeSmall-154",
      "text": "MuiButton-text-133",
      "textPrimary": "MuiButton-textPrimary-134",
      "textSecondary": "MuiButton-textSecondary-135",
    }
  }
  color="secondary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-131 MuiButton-text-133 MuiButton-textSecondary-135 MuiButton-flat-136 MuiButton-flatSecondary-138 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-150"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-131 MuiButton-text-133 MuiButton-textSecondary-135 MuiButton-flat-136 MuiButton-flatSecondary-138 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-82",
          "focusVisible": "MuiButtonBase-focusVisible-83",
          "root": "MuiButtonBase-root-81",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-150"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-81 MuiButton-root-131 MuiButton-text-133 MuiButton-textSecondary-135 MuiButton-flat-136 MuiButton-flatSecondary-138 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-132"
        >
          <span>
            Disabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-128",
                  "childLeaving": "MuiTouchRipple-childLeaving-129",
                  "childPulsate": "MuiTouchRipple-childPulsate-130",
                  "ripple": "MuiTouchRipple-ripple-125",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-127",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-126",
                  "root": "MuiTouchRipple-root-124",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-124"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-124"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders run name as link to its details page 1`] = `
<Link
  className="link"
  replace={false}
  to="/recurringrun/details/run-id"
>
  test-run
</Link>
`;
